[project]
name = "virt-bootstrap"
version = "1.1.1"
description = "Container bootstrapping tool"
readme = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Cedric Bosdonnat", email = "cbosdonnat@suse.com"},
    {name = "Radostin Stoyanov", email = "rstoyanov1@gmail.com"},
]
maintainers = []
keywords = ["virtualization", "container", "rootfs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/virt-manager/virt-bootstrap"}

dependencies = [
    "passlib>=1.6.1",
    "guestfs>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pycodestyle",
    "mock>=2.0",
]

[project.scripts]
virt-bootstrap = "virtBootstrap.virt_bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virtBootstrap"]

[tool.uv]
index-url = "https://pypi.org/simple/"
extra-index-url = ["http://download.libguestfs.org/python"]
dev-dependencies = [
    "pylint",
    "pycodestyle",
    "mock>=2.0",
]
